test/corpus/populated-actor.txt
===
Populated Actor
===

actor User {
  roles = ["reader", "writer"];
  relations = { parent: Organization };
}

---

(source_file
  (resource_block
    (resource_type)
    (namespaced_identifier)
    (declaration
      (namespaced_identifier)
      (assignment_operator)
      (list
        (term
          (value
            (string)))
        (term
          (value
            (string)))))
    (declaration
      (namespaced_identifier)
      (assignment_operator)
      (dict
        (dict_field
          (namespaced_identifier)
          (namespaced_identifier))))))
