test/corpus/test-block.txt
===
Test block
===

test "Organization" {
  # comment
  setup {
    has_role(User{"alice"}, "viewer", Organization{"example"});
    has_role(User{"bob"}, "owner", Organization{"example"});
  }

  assert has_role(User{"bob"}, "owner", Organization{"example"});
}

---

(source_file
  (test_block
    (test_header
      (string))
    (comment)
    (test_setup
      (fact_declaration
        (namespaced_identifier)
        (fact_argument
          (object_literal
            (namespaced_identifier)
            (value
              (string))))
        (fact_argument
          (value
            (string)))
        (fact_argument
          (object_literal
            (namespaced_identifier)
            (value
              (string)))))
      (fact_declaration
        (namespaced_identifier)
        (fact_argument
          (object_literal
            (namespaced_identifier)
            (value
              (string))))
        (fact_argument
          (value
            (string)))
        (fact_argument
          (object_literal
            (namespaced_identifier)
            (value
              (string))))))
    (assertion
      (rule_functor
        (namespaced_identifier)
        (parameter
          (term
            (object_literal
              (namespaced_identifier)
              (value
                (string)))))
        (parameter
          (term
            (value
              (string))))
        (parameter
          (term
            (object_literal
              (namespaced_identifier)
              (value
                (string)))))))))
